# moodleToPreText

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
src/moodle2pretext/: __init__.py  assetManager.py  assignment.py  course.py  main.py  section.py
src/moodle2pretext/question/: __init__.py  coderunner_question.py  exercisegroup_question.py  fillin.py  matching_question.py  multiplechoice.py  question.py
src/moodle2pretext/utils/: __init__.py  code_writer.py  html.py  ptx_writer.py  python_code_runner.py
src/moodle2pretext/utils/ptxProjectFiles/publication/: publication.ptx
src/moodle2pretext/utils/templates/: codeRunner-code.py.jinja  codeRunner-input.py.jinja  codeRunner-postamble.py.jinja  codeRunner-preamble.py.jinja  codeRunner-tests.py.jinja
tests/exports/: test_export_question.py  test_html_pretextification.py  test_html_simplification.py
tests/question/: coderunner_example.xml  description_example.xml  matching_example.xml  multichoice_example.xml  numerical_example.xml  shortanswer_example.xml  test_process_question_text.py  test_question.py
tests/running_code/: test_python_templates.py  test_run_python_examples.py
