[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "moodle2pretext"
version = "0.1.0"
description = "Tool to convert Moodle course info (mostly quiz questions) to a pretext format"
authors = [
    {name = "Haris Skiadas", email = "cskiadas@gmail.com"},
    {name = "Barb Wahl", email = "barb.wahl.1960@gmail.com"},
]
dependencies = [
    "bs4<1.0.0,>=0.0.2",
    "lxml<6.0.0,>=5.2.2",
    "typer<1.0.0,>=0.12.3",
    "ptx-formatter @ git+https://github.com/skiadas/ptx-formatter.git",
    "pytest-html>=3.2.0",
    "pdoc>=14.6.0",
]
requires-python = "<4.0,>=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
moodle2pretext = "moodle2pretext.main:run"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest<7.0.0,>=6.0.0",
    "pytest-clarity<2.0.0,>=1.0.1",
    "pytest-mock",
]
dev = [
    "yapf<1.0.0,>=0.40.2",
]

[tool.pdm.build]
includes = ["src/moodle2pretext"]

[tool.pdm.scripts]
test = "pytest"
lint.cmd = "yapf -ri src tests"
lint.help = "lint in-place"
lint-diff.cmd = "yapf -rd src tests"
lint-diff.help = "error if lint produces diffs"
doc = "pdoc -n -d google -o docs --no-include-undocumented moodle2pretext"
doc-serve = "pdoc -n -d google  --no-include-undocumented moodle2pretext"

[tool.yapf]
based_on_style = "google"
indent_width = 2
split_before_first_argument = true
split_before_expression_after_opening_paren = true
split_before_dict_set_generator = true
split_all_top_level_comma_separated_values = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts="-vv --html=reports/tests/index.html"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:TestResult has no addDuration method',
]
